--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div class="right-group">
     <div class="link-group">
       <a href="javascript:void(0)">
-        <img src="//i.imgur.com/5jInimY.jpg">Michael
+        <img src="https://avatars1.githubusercontent.com/u/19923351?s=460&v=4">Javier
       </a>
     </div>
     <div class="link-group">
@@ -63,7 +63,7 @@
 <div class="left-content">
   <div class="global-links">
     <a href="javascript:void(0)">
-      <img src="//i.imgur.com/5jInimY.jpg" /> First Last
+      <img src="https://avatars1.githubusercontent.com/u/19923351?s=460&v=4" /> First Last
       <span class="counter">1</span>
     </a>
     <a class="activepage" href="javascript:void(0)">
@@ -198,7 +198,7 @@
   <div class="recentcontainer">
     <div class="newpostheader">
       <a href="javascript:void(0)">
-        <img src="//i.imgur.com/5jInimY.jpg" />
+        <img src="https://avatars1.githubusercontent.com/u/19923351?s=460&v=4" />
         <span class="name">First Last</span>
       </a>
       <span>shared <a href="javascript:void(0)">Demyos's</a> <a href="javascript:void(0)">post</a>.</span>
@@ -265,7 +265,7 @@
     <div class="commentpost">
       <div class="input-group">
         <a href="javascript:void(0)">
-          <img src="//i.imgur.com/5jInimY.jpg" />
+          <img src="https://avatars1.githubusercontent.com/u/19923351?s=460&v=4" />
         </a>
 
         <textarea class="form-control" placeholder="Write a comment..."></textarea>
@@ -290,7 +290,7 @@
       </h4>
       <hr />
       <a href="javascript:void(0)">
-        <img src="//i.imgur.com/5jInimY.jpg" />
+        <img src="https://avatars1.githubusercontent.com/u/19923351?s=460&v=4" />
         <span class="name">First Last</span>
       </a>
       <p>
@@ -361,7 +361,7 @@ Let's plant some trees together!
     <div class="commentpost">
       <div class="input-group">
         <a href="javascript:void(0)">
-          <img src="//i.imgur.com/5jInimY.jpg" />
+          <img src="https://avatars1.githubusercontent.com/u/19923351?s=460&v=4" />
         </a>
 
         <textarea class="form-control" placeholder="Write a comment..."></textarea>
@@ -382,7 +382,7 @@ Let's plant some trees together!
   <div class="recentcontainer">
     <div class="newpostheader">
       <a href="javascript:void(0)">
-        <img src="//i.imgur.com/5jInimY.jpg" />
+        <img src="https://avatars1.githubusercontent.com/u/19923351?s=460&v=4" />
         <span class="name">First Last</span>
       </a>
       <p>
@@ -448,7 +448,7 @@ Let's plant some trees together!
     <div class="commentpost">
       <div class="input-group">
         <a href="javascript:void(0)">
-          <img src="//i.imgur.com/5jInimY.jpg" />
+          <img src="https://avatars1.githubusercontent.com/u/19923351?s=460&v=4" />
         </a>
 
         <textarea class="form-control" placeholder="Write a comment..."></textarea>
@@ -623,37 +623,37 @@ Let's plant some trees together!
   <ul>
     <li>
       <a href="javascript:void(0)">
-        <img src="https://i.imgur.com/5jInimY.jpg" align="left"> 
+        <img src="https://avatars1.githubusercontent.com/u/19923351?s=460&v=4" align="left"> 
         <b>First Name</b> <span>likes First Name's post</span>
       </a>
     </li>
     <li>
       <a href="javascript:void(0)">
-        <img src="https://i.imgur.com/5jInimY.jpg" align="left"> 
+        <img src="https://avatars1.githubusercontent.com/u/19923351?s=460&v=4" align="left"> 
         <b>First Name</b> <span>likes First Name's post</span>
       </a>
     </li>
     <li>
       <a href="javascript:void(0)">
-        <img src="https://i.imgur.com/5jInimY.jpg" align="left"> 
+        <img src="https://avatars1.githubusercontent.com/u/19923351?s=460&v=4" align="left"> 
         <b>First Name</b> <span>likes First Name's post</span>
       </a>
     </li>
     <li>
       <a href="javascript:void(0)">
-        <img src="https://i.imgur.com/5jInimY.jpg" align="left"> 
+        <img src="https://avatars1.githubusercontent.com/u/19923351?s=460&v=4" align="left"> 
         <b>First Name</b> <span>likes First Name's post</span>
       </a>
     </li>
     <li>
       <a href="javascript:void(0)">
-        <img src="https://i.imgur.com/5jInimY.jpg" align="left"> 
+        <img src="https://avatars1.githubusercontent.com/u/19923351?s=460&v=4" align="left"> 
         <b>First Name</b> <span>likes First Name's post</span>
       </a>
     </li>
     <li>
       <a href="javascript:void(0)">
-        <img src="https://i.imgur.com/5jInimY.jpg" align="left"> 
+        <img src="https://avatars1.githubusercontent.com/u/19923351?s=460&v=4" align="left"> 
         <b>First Name</b> <span>likes First Name's post</span>
       </a>
     </li>
@@ -662,50 +662,50 @@ Let's plant some trees together!
     <h4>Your Pages</h4>
     <li>
       <a href="javascript:void(0)">
-        <img src="https://i.imgur.com/5jInimY.jpg" align="left"> 
+        <img src="https://avatars1.githubusercontent.com/u/19923351?s=460&v=4" align="left"> 
         <b>Page Name</b> <span>1</span>
       </a>
     </li>
     <li>
       <a href="javascript:void(0)">
-        <img src="https://i.imgur.com/5jInimY.jpg" align="left"> 
+        <img src="https://avatars1.githubusercontent.com/u/19923351?s=460&v=4" align="left"> 
         <b>Page Name</b>
       </a>
     </li>
     <li>
       <a href="javascript:void(0)">
-        <img src="https://i.imgur.com/5jInimY.jpg" align="left"> 
+        <img src="https://avatars1.githubusercontent.com/u/19923351?s=460&v=4" align="left"> 
         <b>Page Name</b> <span>2</span>
       </a>
     </li>
     <h4>Contacts</h4>
     <li>
       <a href="javascript:void(0)">
-        <img src="https://i.imgur.com/5jInimY.jpg" align="left"> 
+        <img src="https://avatars1.githubusercontent.com/u/19923351?s=460&v=4" align="left"> 
         <b>First Name</b> <i class="fa fa-circle"></i>
       </a>
     </li>
     <li>
       <a href="javascript:void(0)">
-        <img src="https://i.imgur.com/5jInimY.jpg" align="left"> 
+        <img src="https://avatars1.githubusercontent.com/u/19923351?s=460&v=4" align="left"> 
         <b>First Name</b> <i class="fa fa-circle"></i>
       </a>
     </li>
     <li>
       <a href="javascript:void(0)">
-        <img src="https://i.imgur.com/5jInimY.jpg" align="left"> 
+        <img src="https://avatars1.githubusercontent.com/u/19923351?s=460&v=4" align="left"> 
         <b>First Name</b> <i class="fa fa-circle"></i>
       </a>
     </li>
     <li>
       <a href="javascript:void(0)">
-        <img src="https://i.imgur.com/5jInimY.jpg" align="left"> 
+        <img src="https://avatars1.githubusercontent.com/u/19923351?s=460&v=4" align="left"> 
         <b>First Name</b> <i class="fa fa-circle"></i>
       </a>
     </li>
     <li>
       <a href="javascript:void(0)">
-        <img src="https://i.imgur.com/5jInimY.jpg" align="left"> 
+        <img src="https://avatars1.githubusercontent.com/u/19923351?s=460&v=4" align="left"> 
         <b>First Name</b> <i class="fa fa-circle"></i>
       </a>
     </li>
