arrange comment line

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
           <img src="https://avatars1.githubusercontent.com/u/19923351?s=460&v=4" />
         </a>
 
-        <textarea class="form-control" placeholder="Write a comment..."></textarea>
+        <textarea class="form-control" placeholder="Write a comment..." style="border-radius: 30px;height: 32px;margin-left: 10px;"></textarea>
         <div class="input-group-btn">
           <a class="btn btn-default" href="javascript:void(0)">
             <i class="fa fa-smile-o"></i>
