--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <i class="fa fa-globe"></i>
         </a>
       </div>
-      <div class="link-group">
+      <div class="link-group last">
         <a class="helpguide" href="javascript:void(0)">
           <i class="fa fa-question-circle"></i>
         </a>
