--- a/index.html
+++ b/index.html
@@ -36,10 +36,9 @@
     <div class="gb-container">
         <div class="left-content">
             <div class="global-links">
-                <a href="javascript:void(0)">
+        
       <img class="page-logo" src="https://scontent.ficn2-1.fna.fbcdn.net/v/t1.0-1/p480x480/21271205_10151289835394999_3080933440031890323_n.png?_nc_cat=0&oh=022c39e4e6038de2321896c049fdcc6b&oe=5BE7ACA1" /> 
-      <span class="page-title-left">The New York Times</span>
-      <span class="authorized"></span>
+      <span class="page-title-left">The New York Times<span class="authorized"></span></span>
       <div class="left-menus">
       	<p>home</p>
 	    <p>contents</p>
@@ -53,8 +52,6 @@
 	    <p>advertisement</p>
 	    <button>Get My Page</button>
       </div>
-        
-      </a>
             </div>
         </div>
         <div class="cover-section">
