--- a/index.html
+++ b/index.html
@@ -57,7 +57,18 @@
         </div>
         <div class="cover-section">
             <div class="cover-img"></div>
-            <div class="cover-infos"></div>
+            <div class="cover-infos">
+            	<div class="left-info">
+            		<span class="good">like</span>
+            		<span class="share">share</span>
+            		<span class="edit">edit</span>
+            		<span class="dotdot"></span>
+            	</div>
+            	<div class="right-info">
+            		<span class="join">join</span>
+            		<span class="send-message">send a message</span>
+            	</div>
+            </div>
         </div>
         <div class="css-grid">
             <div class="feed-content">
