--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
         </div>
         <div class="cover-section">
             <div class="cover-img"></div>
-            <div class="cover-infos">
-            	<div class="left-info">
-            		<span class="good">like</span>
-            		<span class="share">share</span>
-            		<span class="edit">edit</span>
-            		<span class="dotdot"></span>
+            <div class="clearfix cover-infos">
+            	<div class="left-info coverInfo">
+            		<span class="good"><span class="imoji"></span>like</span>
+            		<span class="share"><span class="imoji"></span>share</span>
+            		<span class="edit"><span class="imoji"></span>edit</span>
+            		<span class="dotdot"><span class="imoji"></span></span>
             	</div>
-            	<div class="right-info">
+            	<div class="right-info coverInfo">
             		<span class="join">join</span>
             		<span class="send-message">send a message</span>
             	</div>
