--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             	</div>
             	<div class="right-info coverInfo">
             		<span class="join">join</span>
-            		<span class="send-message">send a message</span>
+            		<span class="send-message"><span class="imoji">send a message</span>
             	</div>
             </div>
         </div>
