--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
             		<span class="dotdot"><span class="imoji"></span></span>
             	</div>
             	<div class="right-info coverInfo">
-            		<span class="join">join</span>
-            		<span class="send-message"><span class="imoji">send a message</span>
+            		<span class="join">Join</span>
+            		<span class="send-message"><span class="imoji"></span>send a message</span>
             	</div>
             </div>
         </div>
