--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
         <div class="css-grid">
             <div class="feed-content">
-                <div class="recentcontainer">
+                <!-- <div class="recentcontainer">
                     <ul class="newpostheader nav nav-tabs nav-justified">
                         <li>
                             <a href="javascript:void(0)">
@@ -115,14 +115,14 @@
         </a>
                         </li>
                     </ul>
-                </div>
+                </div> -->
                 <div class="recentcontainer">
                     <div class="newpostheader">
                         <a href="javascript:void(0)">
-        <img src="https://avatars1.githubusercontent.com/u/19923351?s=460&v=4" />
-        <span class="name">First Last</span>
+        <img src="https://scontent.ficn2-1.fna.fbcdn.net/v/t1.0-1/p480x480/21271205_10151289835394999_3080933440031890323_n.png?_nc_cat=0&oh=022c39e4e6038de2321896c049fdcc6b&oe=5BE7ACA1" />
+        <span class="name">The New York Times</span>
       </a>
-                        <span>shared <a href="javascript:void(0)">Demyos's</a> <a href="javascript:void(0)">post</a>.</span>
+  		</span>
                         <p>
                             <a class="date" href="javascript:void(0)">44 mins</a>
                             <a href="javascript:void(0)">
@@ -140,7 +140,16 @@
                     </div>
                     <div class="newpost">
                         <div class="postcontent">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate sunt quasi in quam asperiores! Optio voluptate impedit eos ex nisi, molestias facilis sint cupiditate, dolores veritatis cum? Enim vel, qui!
+                        	<p>
+								The new Facebook ad archive provides a look into how dark money is trying to influence Trump's Supreme Court nomination.
+							</p>
+                            <div class="news-link-box">
+                            	<div class="photo-section photo1"></div>
+                            	<div class="news-headline-section">
+                            		<div class="headline">Facebook Ads Offer Peek at Looming Supreme Court Fight</div>
+                            		<div class="phrase">Even before President Trump’s new Supreme Court nominee is announced, a fight over the choice is raging on social ...</div>
+                            	</div>
+                            </div>
                         </div>
                     </div>
                     <ul class="newpostfooter nav nav-tabs nav-justified">
@@ -183,7 +192,7 @@
         </a>
                         </li>
                     </ul>
-                    <div class="commentpost">
+                    <!-- <div class="commentpost">
                         <div class="input-group">
                             <a href="javascript:void(0)">
           <img src="https://avatars1.githubusercontent.com/u/19923351?s=460&v=4" />
@@ -201,7 +210,7 @@
           </a>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="recentcontainer">
                     <div class="newpostheader">
