right section making

--- a/index.html
+++ b/index.html
@@ -411,11 +411,17 @@
             </div>
             <div class="thirdcol-content">
                 <div class="section-content">
-                    <i class="fas fa-search"></i>
-                    <input type="text" name="" placeholder="search in this page">
+                    <div class="pac">
+                    	<div class="pics">
+                    		<i class="fas fa-search"></i>
+                    	</div>
+                        <div class="letter">
+                        	<input type="text" name="" placeholder="search in this page">
+                        </div>
+                    </div>
                 </div>
                 <div class="section-content">
-                    location: NY
+                    <div class="pac">location: NY</div>
                 </div>
                 <div class="section-content">
                     <h4>Community</h4>
