--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                                 <br> The art collective Alterazioni Video crisscrossed Italy to document them. https://nyti.ms/2tTHT4P
                                 <br> Photos: Alterazioni Video
                             </p>
-                            <div class="photo-post-box">
+                            <div class="clearfix photo-post-box">
                                 <div class="photo vertical">
                                     <img src="https://scontent.ficn2-1.fna.fbcdn.net/v/t1.0-9/36484308_10151626249404999_415027551715459072_o.jpg?_nc_cat=0&oh=b4f27a89b148e380d1169fd6c1742184&oe=5BE08A22">
                                 </div>
