--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         </li>
                         <li>
                             <a href="javascript:void(0)" title="Leave a comment">
-								<i class="fa fa-comment-o"></i>
+								<i class="fa fa-comment"></i>
 								<span>Comment</span>
 							</a>
                         </li>
@@ -180,7 +180,7 @@
                         </li>
                         <li>
                             <a href="javascript:void(0)">
-								<i class="fa fa-comment-o"></i>
+								<i class="fa fa-comment"></i>
 								<span>3</span>
 							</a>
                         </li>
@@ -261,7 +261,7 @@
                         </li>
                         <li>
                             <a href="javascript:void(0)" title="Leave a comment">
-								<i class="fa fa-comment-o"></i>
+								<i class="fa fa-comment"></i>
 								<span>Comment</span>
 							</a>
                         </li>
@@ -281,7 +281,7 @@
                         </li>
                         <li>
                             <a href="javascript:void(0)">
-								<i class="fa fa-comment-o"></i>
+								<i class="fa fa-comment"></i>
 								<span>3</span>
 							</a>
                         </li>
@@ -357,7 +357,7 @@
                         </li>
                         <li>
                             <a href="javascript:void(0)" title="Leave a comment">
-								<i class="fa fa-comment-o"></i>
+								<i class="fa fa-comment"></i>
 								<span>Comment</span>
 							</a>
                         </li>
@@ -377,7 +377,7 @@
                         </li>
                         <li>
                             <a href="javascript:void(0)">
-								<i class="fa fa-comment-o"></i>
+								<i class="fa fa-comment"></i>
 								<span>3</span>
 							</a>
                         </li>
@@ -496,7 +496,7 @@
 							<span>Your Page</span>
 						</a>
                         <a href="javascript:void(0)">
-							<i class="fa fa-comment"></i>Messages
+							<i class="fa fa-comment</i>Messages
 						</a>
                         <a href="javascript:void(0)">
 							<i class="fa fa-globe"></i>Notifications <span>1</span>
