--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/index.js" type="text/javascript"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--[if IE]>
+		<link rel="stylesheet" type="text/css" href="all-ie-only.css" />
+	<![endif]-->
 </head>
 
 <body>
