--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                     </div>
                 </div>
                 <div class="section-content">
-                    <div class="pac">location: NY</div>
+                    <div class="pac">Newspapers in New York, New York</div>
                 </div>
                 <div class="section-content">
                     <h4>Community</h4>
@@ -444,7 +444,7 @@
                     </div>
                 </div>
                 <div class="section-content">
-                    <h4>Information</h4>
+                    <h4>About</h4>
                     <div class="pac">
                         <div class="pics">
                             <i class="fas fa-phone"></i>
@@ -478,6 +478,58 @@
                             newspaper, media/company
                         </div>
                     </div>
+                </div>
+                <div class="section-content">
+                    <h5>People</h5>
+                    <hr>
+                    <a href="#"></a>><h4>15,880,403</h4><span>likes</span></a>
+                </div>
+                <div class="section-content">
+                    <h5>Pages Liked by This Page</h5>
+                    <hr>
+                    <div class="pac">
+                        <img src="" alt="" class="pac-pic">
+                        <div class="letter"><h4>CJ Chivers</h4></div>
+                    </div>
+                    <hr>
+                    <div class="pac">
+                        <img src="" alt="" class="pac-pic">
+                        <div class="letter"><h4>The New York Times - Times...</h4></div>
+                    </div>
+                    <hr>
+                    <div class="pac">
+                        <img src="" alt="" class="pac-pic">
+                        <div class="letter"><h4>The New York Times - Well -...</h4></div>
+                    </div>
+                </div>
+                <div class="section-content">
+                    <h5>Related Pages</h5>
+                    <hr>
+                    <div class="pac">
+                        <img src="" alt="" class="pac-pic">
+                        <div class="letter">
+                            <h4>CNN</h4>
+                            <div>Media/News Company</div>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="pac">
+                        <img src="" alt="" class="pac-pic">
+                        <div class="letter">
+                            <h4>BBC News</h4>
+                            <div>Media/News Company</div>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="pac">
+                        <img src="" alt="" class="pac-pic">
+                        <div class="letter">
+                            <h4>National Geographic</h4>
+                            <div>Media/News Company</div>
+                        </div>
+                    </div>
+                    <hr>
+                    <h5>Newspapers in New York, New York</h5>
                 </div>
                 <div class="section-content">
                     <h4>
