right section update

--- a/index.html
+++ b/index.html
@@ -424,7 +424,10 @@
                     </div>
                 </div>
                 <div class="section-content">
-                    <div class="pac">Newspapers in New York, New York</div>
+                    <div class="pac">
+                        <div></div>
+                        <div class="letter">Newspapers in New York, New York</div>
+                    </div>
                 </div>
                 <div class="section-content">
                     <h4>Community</h4>
@@ -480,56 +483,62 @@
                     </div>
                 </div>
                 <div class="section-content">
-                    <h5>People</h5>
+                    <h4>People</h4>
                     <hr>
-                    <a href="#"></a>><h4>15,880,403</h4><span>likes</span></a>
+                    <a href="#"></a><h6>15,880,403<span>likes</span></h6></a>
                 </div>
                 <div class="section-content">
-                    <h5>Pages Liked by This Page</h5>
+                    <h4>Pages Liked by This Page</h4>
                     <hr>
-                    <div class="pac">
-                        <img src="" alt="" class="pac-pic">
-                        <div class="letter"><h4>CJ Chivers</h4></div>
+                    <div class="pac2">
+                        <img src="https://scontent.ficn2-1.fna.fbcdn.net/v/t1.0-1/c4.4.52.52/p60x60/1016824_603702196328523_75849375_n.jpg?_nc_cat=0&oh=11d25eff019c07d2ba94414f0ec529ff&oe=5BE18DF8" alt="">
+                        <span class="name">CJ Chivers</span>
+                        <span class="fa-check-circle fas"></span>
                     </div>
                     <hr>
-                    <div class="pac">
-                        <img src="" alt="" class="pac-pic">
-                        <div class="letter"><h4>The New York Times - Times...</h4></div>
+                    <div class="pac2">
+                        <img src="https://scontent.ficn2-1.fna.fbcdn.net/v/t1.0-1/p56x56/16425854_1201254269989402_7549909605920409701_n.jpg?_nc_cat=0&oh=0a5457ee1cbe6cc2b52c6d7c7b24fa95&oe=5BA895C0" alt="">
+                        <span class="name">The New York Times - Times...</span>
+                        <span class="fa-check-circle fas"></span>
                     </div>
                     <hr>
-                    <div class="pac">
-                        <img src="" alt="" class="pac-pic">
-                        <div class="letter"><h4>The New York Times - Well -...</h4></div>
+                    <div class="pac2">
+                        <img src="https://scontent.ficn2-1.fna.fbcdn.net/v/t1.0-1/p56x56/28279596_1983933155157530_6657390930091836706_n.jpg?_nc_cat=0&oh=5089c30709d97a092200af3fe915fabb&oe=5BE3EF6B" alt="">
+                        <span class="name">The New York Times - Well -...</span>
+                        <span class="fa-check-circle fas"></span>
                     </div>
                 </div>
                 <div class="section-content">
-                    <h5>Related Pages</h5>
+                    <h4>Related Pages</h4>
                     <hr>
-                    <div class="pac">
-                        <img src="" alt="" class="pac-pic">
-                        <div class="letter">
-                            <h4>CNN</h4>
-                            <div>Media/News Company</div>
+                    <div class="pac2">
+                        <img src="https://scontent.ficn2-1.fna.fbcdn.net/v/t1.0-1/p56x56/12289622_10154246192721509_1897912583584847639_n.png?_nc_cat=0&oh=80f39ab232459e330286c0e5283a241d&oe=5BDD6A33" alt="cnn">
+                        <div class="vertical-set">
+                            <span class="name">CNN</span>
+                            <span class="fa-check-circle fas"></span>
+                            <br><span class="small-letter">Media/News Company</span>
                         </div>
                     </div>
                     <hr>
-                    <div class="pac">
-                        <img src="" alt="" class="pac-pic">
-                        <div class="letter">
-                            <h4>BBC News</h4>
-                            <div>Media/News Company</div>
+                    <div class="pac2">
+                        <img src="https://scontent.ficn2-1.fna.fbcdn.net/v/t1.0-1/p56x56/23435245_10155306669637217_5362481967672932664_n.png?_nc_cat=0&oh=1821e1018c90c41490f9cd44a1d677d2&oe=5BAA2608" alt="bbc">
+                        <div class="vertical-set">
+                            <span class="name">BBC News</span>
+                            <span class="fa-check-circle fas"></span>
+                            <br><span class="small-letter">Media/News Company</span>
                         </div>
                     </div>
                     <hr>
-                    <div class="pac">
-                        <img src="" alt="" class="pac-pic">
-                        <div class="letter">
-                            <h4>National Geographic</h4>
-                            <div>Media/News Company</div>
+                    <div class="pac2">
+                        <img src="https://scontent.ficn2-1.fna.fbcdn.net/v/t1.0-1/p56x56/15036440_10154093385868951_1032260631509631633_n.jpg?_nc_cat=0&oh=c7eed02a231487709dd987f4921b18c7&oe=5BA5A4CE" alt="ngc">
+                        <div class="vertical-set">
+                            <span class="name">National Geographic</span>
+                            <span class="fa-check-circle fas"></span>
+                            <br><span class="small-letter">Media/News Company</span>
                         </div>
                     </div>
                     <hr>
-                    <h5>Newspapers in New York, New York</h5>
+                    <h4>Newspapers in New York, New York</h4>
                 </div>
                 <div class="section-content">
                     <h4>
