--- a/index.html
+++ b/index.html
@@ -483,12 +483,12 @@
                     </div>
                 </div>
                 <div class="section-content">
-                    <h4>People</h4>
+                    <h4>People<i class="fas fa-angle-right"></i></h4>
                     <hr>
-                    <a href="#"></a><h6>15,880,403<span>likes</span></h6></a>
+                    <a href="#"><h6>15,880,403<span>likes</span></h6></a>
                 </div>
                 <div class="section-content">
-                    <h4>Pages Liked by This Page</h4>
+                    <h4>Pages Liked by This Page<i class="fas fa-angle-right"></i></h4>
                     <hr>
                     <div class="pac2">
                         <img src="https://scontent.ficn2-1.fna.fbcdn.net/v/t1.0-1/c4.4.52.52/p60x60/1016824_603702196328523_75849375_n.jpg?_nc_cat=0&oh=11d25eff019c07d2ba94414f0ec529ff&oe=5BE18DF8" alt="">
@@ -498,18 +498,18 @@
                     <hr>
                     <div class="pac2">
                         <img src="https://scontent.ficn2-1.fna.fbcdn.net/v/t1.0-1/p56x56/16425854_1201254269989402_7549909605920409701_n.jpg?_nc_cat=0&oh=0a5457ee1cbe6cc2b52c6d7c7b24fa95&oe=5BA895C0" alt="">
-                        <span class="name">The New York Times - Times...</span>
+                        <span class="name">The New York Times...</span>
                         <span class="fa-check-circle fas"></span>
                     </div>
                     <hr>
                     <div class="pac2">
                         <img src="https://scontent.ficn2-1.fna.fbcdn.net/v/t1.0-1/p56x56/28279596_1983933155157530_6657390930091836706_n.jpg?_nc_cat=0&oh=5089c30709d97a092200af3fe915fabb&oe=5BE3EF6B" alt="">
-                        <span class="name">The New York Times - Well -...</span>
+                        <span class="name">The New York-...</span>
                         <span class="fa-check-circle fas"></span>
                     </div>
                 </div>
                 <div class="section-content">
-                    <h4>Related Pages</h4>
+                    <h4>Related Pages<i class="fas fa-angle-right"></i></h4>
                     <hr>
                     <div class="pac2">
                         <img src="https://scontent.ficn2-1.fna.fbcdn.net/v/t1.0-1/p56x56/12289622_10154246192721509_1897912583584847639_n.png?_nc_cat=0&oh=80f39ab232459e330286c0e5283a241d&oe=5BDD6A33" alt="cnn">
@@ -538,49 +538,7 @@
                         </div>
                     </div>
                     <hr>
-                    <h4>Newspapers in New York, New York</h4>
-                </div>
-                <div class="section-content">
-                    <h4>
-					Your Pages
-
-						<a href="javascript:void(0)">
-							<i class="fa fa-caret-up"></i>
-						</a>
-						<hr>
-					</h4>
-                    <a href="javascript:void(0)">
-						<i class="fa fa-caret-down"></i>
-					</a>
-                    <a href="javascript:void(0)">
-						<img src="//i.imgur.com/k2t0gee.png" />
-					</a>
-                    <p>
-                        <a href="javascript:void(0)">
-							<span>Your Page</span>
-						</a>
-                        <a href="javascript:void(0)">
-							<i class="fa fa-comment</i>Messages
-						</a>
-                        <a href="javascript:void(0)">
-							<i class="fa fa-globe"></i>Notifications <span>1</span>
-						</a>
-                        <hr>
-                    </p>
-                    <p>
-                        <a href="javascript:void(0)">
-							<i class="fa fa-pencil-square-o"></i>Publish
-						</a>
-                        <a href="javascript:void(0)">
-							<i class="fa fa-camera"></i>Photo
-						</a>
-                        <a href="javascript:void(0)">
-							<i class="fa fa-calendar"></i>Event
-						</a>
-                        <a href="javascript:void(0)">
-							<i class="fa fa-bell"></i>Promote
-						</a>
-                    </p>
+                    <p style="text-align: center;margin: 3px;font-weight: bold;color: #1e54bb;">Newspapers in New York, New York</p>
                 </div>
                 <div class="section-content">
                     <a href="javascript:void(0)">English (US)</a> · <a href="javascript:void(0)">Español</a> · <a href="javascript:void(0)">Português (Brasil)</a> · <a href="javascript:void(0)">Français (France)</a> · <a href="javascript:void(0)">Deutsch</a>
@@ -588,7 +546,7 @@
                 <div>
                     <a href="javascript:void(0)">Privacy</a> · <a href="javascript:void(0)">Terms</a> · <a href="javascript:void(0)">Advertising</a> · <a href="javascript:void(0)">Ad Choices</a> · <a href="javascript:void(0)">Cookies</a> · <a href="javascript:void(0)">More</a>
                     <p>
-                        Facebook © 2017
+                        Facebook © 2018
                     </p>
                 </div>
             </div>
