--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
                 <div class="section-content">
                     <h4>People<i class="fas fa-angle-right"></i></h4>
                     <hr>
-                    <a href="#"><h6>15,880,403<span>likes</span></h6></a>
+                    <h6>15,880,403<span>likes</span></h6>
                 </div>
                 <div class="section-content">
                     <h4>Pages Liked by This Page<i class="fas fa-angle-right"></i></h4>
