--- a/index.html
+++ b/index.html
@@ -483,12 +483,12 @@
                     </div>
                 </div>
                 <div class="section-content">
-                    <h4>People<i class="fas fa-angle-right"></i></h4>
+                    <h4>People<i class="fas fa-angle-right fr"></i></h4>
                     <hr>
                     <h6>15,880,403<span>likes</span></h6>
                 </div>
                 <div class="section-content">
-                    <h4>Pages Liked by This Page<i class="fas fa-angle-right"></i></h4>
+                    <h4>Pages Liked by This Page<i class="fas fa-angle-right fr"></i></h4>
                     <hr>
                     <div class="pac2">
                         <img src="https://scontent.ficn2-1.fna.fbcdn.net/v/t1.0-1/c4.4.52.52/p60x60/1016824_603702196328523_75849375_n.jpg?_nc_cat=0&oh=11d25eff019c07d2ba94414f0ec529ff&oe=5BE18DF8" alt="">
@@ -509,7 +509,7 @@
                     </div>
                 </div>
                 <div class="section-content">
-                    <h4>Related Pages<i class="fas fa-angle-right"></i></h4>
+                    <h4>Related Pages<i class="fas fa-angle-right fr"></i></h4>
                     <hr>
                     <div class="pac2">
                         <img src="https://scontent.ficn2-1.fna.fbcdn.net/v/t1.0-1/p56x56/12289622_10154246192721509_1897912583584847639_n.png?_nc_cat=0&oh=80f39ab232459e330286c0e5283a241d&oe=5BDD6A33" alt="cnn">
