--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <input class="login-form" type="text" placeholder="Email or Phone">
             </div>
             <div class="link-group">
-                <input class="login-form" type="text" placeholder="Password">
+                <input class="login-form" type="password" placeholder="Password">
             </div>
             <div class="link-group">
                 <span class="login-button">Login</span>
