--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     </div>
                     <ul class="newpostfooter nav nav-tabs nav-justified">
                         <li>
-                            <a href="javascript:void(0)">
+                            <a href="javascript:void(0)" class="like-click">
 								<i class="fa fa-thumbs-up"></i>
 								<span>Like</span>
 							</a>
@@ -176,7 +176,7 @@
                     </ul>
                     <ul class="community-counter nav nav-tabs nav-justified">
                         <li>
-                            <a href="javascript:void(0)">
+                            <a href="javascript:void(0)" class="like-result">
 								<i class="fa fa-thumbs-up"></i>
 								<span>1</span>
 							</a>
@@ -257,7 +257,7 @@
                     </div>
                     <ul class="newpostfooter nav nav-tabs nav-justified">
                         <li>
-                            <a href="javascript:void(0)">
+                            <a href="javascript:void(0)" class="like-click">
 								<i class="fa fa-thumbs-up"></i>
 								<span>Like</span>
 							</a>
@@ -277,7 +277,7 @@
                     </ul>
                     <ul class="community-counter nav nav-tabs nav-justified">
                         <li>
-                            <a href="javascript:void(0)">
+                            <a href="javascript:void(0)" class="like-result">
 								<i class="fa fa-thumbs-up"></i>
 								<span>1</span>
 							</a>
@@ -353,7 +353,7 @@
                     </div>
                     <ul class="newpostfooter nav nav-tabs nav-justified">
                         <li>
-                            <a href="javascript:void(0)">
+                            <a href="javascript:void(0)" class="like-click">
 								<i class="fa fa-thumbs-up"></i>
 								<span>Like</span>
 							</a>
@@ -373,7 +373,7 @@
                     </ul>
                     <ul class="community-counter nav nav-tabs nav-justified">
                         <li>
-                            <a href="javascript:void(0)">
+                            <a href="javascript:void(0)" class="like-result">
 								<i class="fa fa-thumbs-up"></i>
 								<span>1</span>
 							</a>
@@ -593,7 +593,7 @@
         <ul>
             <h4>Your Pages</h4>
             <li>
-                <a href="javascript:void(0)">
+                <a href="javascript:void(0)" class="like-result">
         <img src="https://avatars1.githubusercontent.com/u/19923351?s=460&v=4" align="left"> 
         <b>Page Name</b> <span>1</span>
       </a>
