--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 							</a>
                         </li>
                         <li>
-                            <a href="javascript:void(0)" title="Leave a comment">
+                            <a href="javascript:void(0)" title="Leave a comment" class="view-comment">
 								<i class="fa fa-comment"></i>
 								<span>Comment</span>
 							</a>
@@ -275,6 +275,16 @@
 							</a>
                         </li>
                     </ul>
+                    <div class="community-counter">
+                        <div class="comment-contents">
+                            <ul>
+                                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque ipsa tempore suscipit nam porro aliquid, nihil deserunt commodi voluptas delectus eaque fugiat ipsam animi fuga sunt repellendus ex necessitatibus id.</li>
+                                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+                                <li>Lorem ipsum dolor.</li>
+                                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque sit doloribus ut.</li>
+                            </ul>
+                        </div>
+                    </div>
                     <ul class="community-counter nav nav-tabs nav-justified">
                         <li>
                             <a href="javascript:void(0)" class="like-result">
