--- a/index.html
+++ b/index.html
@@ -277,12 +277,22 @@
                     </ul>
                     <div class="community-counter">
                         <div class="comment-contents">
-                            <ul>
-                                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque ipsa tempore suscipit nam porro aliquid, nihil deserunt commodi voluptas delectus eaque fugiat ipsam animi fuga sunt repellendus ex necessitatibus id.</li>
-                                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-                                <li>Lorem ipsum dolor.</li>
-                                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque sit doloribus ut.</li>
-                            </ul>
+                            <div class="comment-box">
+                                <div class="pic"></div>
+                                <div class="comment">Lorem ipsum dolor sit.</div>
+                            </div>
+                            <div class="comment-box">
+                                <div class="pic"></div>
+                                <div class="comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, quo.</div>
+                            </div>
+                            <div class="comment-box">
+                                <div class="pic"></div>
+                                <div class="comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil reprehenderit saepe quae, maxime est, numquam eius tenetur sequi quos doloremque iusto minima labore delectus earum quas enim dolore tempora magnam.</div>
+                            </div>
+                            <div class="comment-box">
+                                <div class="pic"></div>
+                                <div class="comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni voluptas nemo deleniti, omm mollitia.</div>
+                            </div>
                         </div>
                     </div>
                     <ul class="community-counter nav nav-tabs nav-justified">
