comment section made

--- a/index.html
+++ b/index.html
@@ -279,7 +279,9 @@
                         <div class="comment-contents">
                             <div class="comment-box">
                                 <div class="pic"></div>
-                                <div class="comment">Lorem ipsum dolor sit.</div>
+                                <div class="comment">Lorem ipsum dolor sit.
+                                    <span class="thumbs-up"><i class="fas fa-thumbs-up"></i>43</span>
+                                </div>
                             </div>
                             <div class="comment-box">
                                 <div class="pic"></div>
