event handler: sllideToggle

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 							</a>
                         </li>
                     </ul>
-                    <div class="community-counter">
+                    <div class="community-counter comment-slide">
                         <div class="comment-contents">
                             <div class="comment-box">
                                 <div class="pic"></div>
