--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 							</a>
                         </li>
                         <li>
-                            <a href="javascript:void(0)" title="Leave a comment">
+                            <a href="javascript:void(0)" title="Leave a comment" class="view-comment">
 								<i class="fa fa-comment"></i>
 								<span>Comment</span>
 							</a>
@@ -174,6 +174,28 @@
 							</a>
                         </li>
                     </ul>
+                    <div class="community-counter comment-slide">
+                        <div class="comment-contents">
+                            <div class="comment-box">
+                                <div class="pic"></div>
+                                <div class="comment">Lorem ipsum dolor sit.
+                                    <span class="thumbs-up"><i class="fas fa-thumbs-up"></i>43</span>
+                                </div>
+                            </div>
+                            <div class="comment-box">
+                                <div class="pic"></div>
+                                <div class="comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, quo.</div>
+                            </div>
+                            <div class="comment-box">
+                                <div class="pic"></div>
+                                <div class="comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil reprehenderit saepe quae, maxime est, numquam eius tenetur sequi quos doloremque iusto minima labore delectus earum quas enim dolore tempora magnam.</div>
+                            </div>
+                            <div class="comment-box">
+                                <div class="pic"></div>
+                                <div class="comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni voluptas nemo deleniti, omm mollitia.</div>
+                            </div>
+                        </div>
+                    </div>
                     <ul class="community-counter nav nav-tabs nav-justified">
                         <li>
                             <a href="javascript:void(0)" class="like-result">
@@ -381,7 +403,7 @@
 							</a>
                         </li>
                         <li>
-                            <a href="javascript:void(0)" title="Leave a comment">
+                            <a href="javascript:void(0)" title="Leave a comment" class="view-comment">
 								<i class="fa fa-comment"></i>
 								<span>Comment</span>
 							</a>
@@ -393,6 +415,28 @@
 							</a>
                         </li>
                     </ul>
+                    <div class="community-counter comment-slide">
+                        <div class="comment-contents">
+                            <div class="comment-box">
+                                <div class="pic"></div>
+                                <div class="comment">Lorem ipsum dolor sit.
+                                    <span class="thumbs-up"><i class="fas fa-thumbs-up"></i>43</span>
+                                </div>
+                            </div>
+                            <div class="comment-box">
+                                <div class="pic"></div>
+                                <div class="comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, quo.</div>
+                            </div>
+                            <div class="comment-box">
+                                <div class="pic"></div>
+                                <div class="comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil reprehenderit saepe quae, maxime est, numquam eius tenetur sequi quos doloremque iusto minima labore delectus earum quas enim dolore tempora magnam.</div>
+                            </div>
+                            <div class="comment-box">
+                                <div class="pic"></div>
+                                <div class="comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni voluptas nemo deleniti, omm mollitia.</div>
+                            </div>
+                        </div>
+                    </div>
                     <ul class="community-counter nav nav-tabs nav-justified">
                         <li>
                             <a href="javascript:void(0)" class="like-result">
