--- a/index.html
+++ b/index.html
@@ -425,7 +425,9 @@
                             </div>
                             <div class="comment-box">
                                 <div class="pic"></div>
-                                <div class="comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, quo.</div>
+                                <div class="comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, quo.
+                                    <span class="thumbs-up"><i class="fas fa-heart"></i>4</span>
+                                </div>
                             </div>
                             <div class="comment-box">
                                 <div class="pic"></div>
