update like thumb color: blue

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 							</a>
                         </li>
                         <li>
-                            <a href="javascript:void(0)" title="Send this to friends or post it to your timeline">
+                            <a href="javascript:void(0)" title="Send this to friends or post it to your timeline" class="block-click">
 								<i class="fa fa-share"></i>
 								<span>Share</span>
 							</a>
@@ -291,7 +291,7 @@
 							</a>
                         </li>
                         <li>
-                            <a href="javascript:void(0)" title="Send this to friends or post it to your timeline">
+                            <a href="javascript:void(0)" title="Send this to friends or post it to your timeline" class="block-click">
 								<i class="fa fa-share"></i>
 								<span>Share</span>
 							</a>
@@ -409,7 +409,7 @@
 							</a>
                         </li>
                         <li>
-                            <a href="javascript:void(0)" title="Send this to friends or post it to your timeline">
+                            <a href="javascript:void(0)" title="Send this to friends or post it to your timeline" class="block-click">
 								<i class="fa fa-share"></i>
 								<span>Share</span>
 							</a>
