--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <div class="pre-survey-wrapper" style="display: none">
+    <div class="pre-survey-wrapper">
         <div class="pre-inner">
             <form class="pre-survey">
                 <div class="number-one">
