--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/modals.css">
+    <link rel="stylesheet" type="text/css" href="css/ad.css">
+
+    <link href="https://fonts.googleapis.com/css?family=Hind" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-latest.js" type="text/javascript"></script>
     <!-- <script src="js/jquery-3.1.0.slim.min.js" type="text/javascript"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" type="text/javascript"></script>
@@ -86,8 +89,8 @@
 
     <div class="ad-container">
         <div class="inner">
-            <div id="map"></div>
             <div class="ad-content"></div>
+            <div id="map"></div>
         </div>
     </div>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
