--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" type="text/css" href="css/ad.css">
 
     <link href="https://fonts.googleapis.com/css?family=Hind" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-latest.js" type="text/javascript"></script>
     <!-- <script src="js/jquery-3.1.0.slim.min.js" type="text/javascript"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" type="text/javascript"></script>
