--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <!-- <script src="js/jquery-3.1.0.slim.min.js" type="text/javascript"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/index.js" type="text/javascript"></script>
+    <script src="js/adList.js" type="text/javascript"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVPLLlJAQ679Frd0gu11khJ9mW02wsvWQ&callback=initMap"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--[if IE]>
