--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-latest.js" type="text/javascript"></script>
     <!-- <script src="js/jquery-3.1.0.slim.min.js" type="text/javascript"></script> -->
+    <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/index.js" type="text/javascript"></script>
     <script src="js/adList.js" type="text/javascript"></script>
@@ -92,6 +93,8 @@
 
     <div class="ad-container">
         <div class="inner">
+            <div class="timer"></div>
+            <div class="ad-close">x</div>
             <div class="ad-content"></div>
             <div id="map"></div>
         </div>
